retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyCode__c</fullName>
        <label>AgencyCode</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <label>BusinessType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LegalEntity</fullName>
                </value>
                <value>
                    <fullName>SoleProprietorship</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
                <value>
                    <fullName>AuthorityOrganization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>National Identity Number / VAT Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeDeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeDeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialAddressNormalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Normalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResidentialAddress__c</fullName>
        <formula>IF(
				ISBLANK(
								TEXT(ResidentialStreetType__c) + 
								ResidentialStreetName__c + 
								ResidentialStreetNumber__c + 
								ResidentialStreetNumberExtn__c + 
								ResidentialCity__c + 
								ResidentialProvince__c + 
								ResidentialPostalCode__c + 
								TEXT(ResidentialCountry__c)
				),&apos;&apos;, TRIM(
								    TEXT(ResidentialStreetType__c) 
								+ &apos; &apos; + ResidentialStreetName__c 
								+ &apos; &apos; + ResidentialStreetNumber__c 
								+ IF(ISBLANK(ResidentialStreetNumberExtn__c), &apos;&apos;,	&apos; &apos; + ResidentialStreetNumberExtn__c) 
								+ &apos;, &apos; + ResidentialCity__c 
								+ IF(ISBLANK(ResidentialProvince__c), &apos;&apos;, &apos; (&apos; + ResidentialProvince__c + &apos;)&apos; )
								+ &apos; &apos; + ResidentialPostalCode__c 
								+ &apos;, &apos; + TEXT(ResidentialCountry__c)
))</formula>
        <label>Residential Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialApartment__c</fullName>
        <label>Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialBuilding__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialCountry__c</fullName>
        <defaultValue>&apos;ITALY&apos;</defaultValue>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResidentialFloor__c</fullName>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialLocality__c</fullName>
        <label>Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialPostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialProvince__c</fullName>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialStreetName__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialStreetNumberExtn__c</fullName>
        <label>Street Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialStreetNumber__c</fullName>
        <label>Street Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidentialStreetType__c</fullName>
        <description>Street type (Street, avenue, terrace,roads,Square)</description>
        <label>Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                    <default>true</default>
                    <label>Street</label>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
                <value>
                    <fullName>Terrace</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TraderElectric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trader Electric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TraderGas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trader Gas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueCode__c</fullName>
        <externalId>true</externalId>
        <label>UniqueCode</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <label>VATNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <description>Sales agency</description>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Business Account</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>BusinessProspect</fullName>
        <active>true</active>
        <description>Prospect business Account</description>
        <label>Business Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <description>Distributor</description>
        <label>Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trader</fullName>
        <active>true</active>
        <description>Trader</description>
        <label>Trader</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>